feat: socket connect
1. 클라이언트에서 소켓 메시지 전달 가능
2. 서버에서는 메시지 데이터를 받을 수 있도록 구현
3. 방식은 서버 -> 클라이언트로 html를 렌더링하는 방식

--- a/socket-io-practice/server/static/index.html
+++ b/socket-io-practice/server/static/index.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chatting App by Socket.io</title>
   <link rel="stylesheet" href="/css/index.css">
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/index.js"></script>
 </head>
 <body>
-  <div id="main">Hello, Socket!</div>
+  <div id="main">
+    <h1>"Hello, Socket!"</h1>
+    <input type="text" id="test">
+    <button onclick="send()">Send!</button>
+  </div>
 </body>
 </html>
