--- a/vanillajs-page-route/index.html
+++ b/vanillajs-page-route/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./src/index.js"></script>
+  <script src="./src/index.js" type="module"></script>
 </body>
 </html>
