--- a/vanillajs-page-route/index.html
+++ b/vanillajs-page-route/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
   <script src="./src/index.js" type="module"></script>
